public/stylesheets/main.css
/* ... */
.hero-controls-ribbon:after {

   right: -2em;

   border-left-width: 1.5em;

   border-right-color: transparent;

   -webkit-box-shadow: rgba(000,000,000,0.4) -1px 1px 1px;

   -moz-box-shadow: rgba(000,000,000,0.4) -1px 1px 1px;

   box-shadow: rgba(000,000,000,0.4) -1px 1px 1px;

  }
.hero-controls-ribbon .hero-controls-ribbon-content:before, .hero-controls-ribbon .hero-controls-ribbon-content:after {

	border-color: black transparent transparent transparent;

	position: absolute;

	display: block;

	border-style: solid;

	bottom: -17px;

	content: '';

}

.hero-controls-ribbon .hero-controls-ribbon-content:before {

	left: 0;

	border-width: 1em 0 0 1em;

}

.hero-controls-ribbon .hero-controls-ribbon-content:after {

	right: 0;

	border-width: 1em 1em 0 0;

}

.hero-controls-ribbon {
	min-height: 77px;
    padding-top: 8px;
    padding-left: 8px;
    padding-right: 8px;
    font-weight: lighter;
    position: relative;
}

.button {
	border-radius: 4px;
	background-color:#ddd;
	padding:4px 12px 4px 12px;
	width:200px;
	height:32px;
	font-size:12pt;
	text-decoration: none;
	color:black;
	text-align:center;
	vertical-align: middle;
	cursor:pointer;
}

.button:hover{
	text-decoration: underline;
}

.filter-button {
	border-radius: 4px;
	background-color:white;
	padding:4px 24px 4px 24px;
	font-size:12pt;
	text-decoration: none;
	color:black;
	text-align:center;
	vertical-align: middle;
	cursor:pointer;
	margin-bottom: 8px;
	display: inline-block;
	margin-right: 4px;
}


#login-button, .finish-verify-button {
	background-color:#C51834;
	color:white;
	padding:6px 4px 4px 4px;
	width:200px;
	height:26px;
	font-size:16pt;
	font-weight:200;
	cursor:pointer;
	display: inline-block;
	text-align:center;
}

.finish-verify-button:hover {
	background-color: black;
}

.blue-button {
	border-radius: 4px;
	background-color:black;
	padding:4px 12px 4px 12px;
	font-size:10pt;
	text-decoration: none;
	color:white;
	font-weight:200;
	cursor:pointer;
	text-align:center;
}

.blue-button:hover {
	text-decoration: underline;
}


#login-button:hover {
	//background-color:#aedefc;
}

.welcome {
	font-size:64pt;
	color:white;
	text-align:center;
	margin-bottom:32px;
}

.welcome > img {
	width:180px;
	vertical-align: text-top;
	top: 32px;
	position: relative;
}

#dashboard-item-container {
	text-align: center;
}

.dashboard-item {
	text-align:center;
	width:240px;
	display:inline-block;
	margin-right:64px;
	margin-left:64px;
	margin-bottom:24px;
}

.dashboard-item > a {
	text-decoration: none;
}

.dashboard-item img {
	width: 200px;
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 24px;
}

.dashboard-item-text {
	font-size:20pt;
	font-weight:lighter;
	text-decoration: none;
	color:black;
}

.roundbox {
	background-color:white;
	border-radius:8px;
	padding-left: 32px;
	padding-right: 44px;
	padding-top: 16px;
	padding-bottom: 16px;
	margin-bottom:32px;
	margin-right:24px;
}

.roundbox.update {
	width: 1160px;
}

.roundbox-textinput {
	border:solid 0px transparent;
	padding:8px;
	height:32px;
	font-size:14pt;
	font-weight:200;
	outline:none;
	margin-bottom:12px;
	background-color: #eee
}

.roundbox-textinput:focus {
	background-color:white;
}

.textarea-description {
	resize: none;
	min-height:64px;
	font-family: Helvetica, sans-serif;
}

.textarea-update {
	resize: none;
	font-family: Helvetica, sans-serif;
	width:100%;
}

.projectbox {
	background-color: white;
	border-radius: 10px;
	min-width: 300px;
	min-height: 64px;
	font-size: 14pt;
	font-weight: 100;
	border-spacing: 0px;
	overflow: hidden;
	padding: 4px;
}

.projectbox td {
	padding:0px;
}

.project-state {
	font-size: 12px;
	width: 75px;
	background-color: #F7CA6A;
	padding-top: 4px;
	padding-bottom: 4px;
	display: block;
	border-radius: 4px;
}

.isotope-item {
	float: left;
}
.grid-sizer, .isotope-item {
	width : 47%;
}

.hero-card-isotope-item {
	width: 240px;
}

.projectbox-title {
	/*width: 100%;*/
	padding:20px 0px 50px 20px !important;
	cursor: pointer;
}

.projectbox-needshelp-description {
	font-weight:bold;
}

.projectbox-container {
	width:100%;
	margin-bottom:32px;
}

.hero-card-container {
	width: 1216px;
	margin-left: auto;
	/*margin-right: auto;*/
}

.filter-button-container {
	width:80%;
	margin:0px auto;
	text-align: center;
	margin-bottom:16px;
}

.no-underline * {
	text-decoration: none;
}

 * {

}

.projectbox-icon {
	width: 55px;
	position: relative;
	margin-right: auto;
	margin-left: auto;
	cursor: pointer;
}

.projectbox-description {
	display:none;
	margin-right:8px;
	margin-bottom:6px;
}

.projectbox[expanded="true"] .projectbox-description {
	display:block;
}

.projectbox-expandable {
	width: 500px;
	display: block;
	word-wrap: normal;
	word-break: break-word;
}

.projectbox-expandable:before {
	content: '\A';
}

.projectbox-view {
	font-size: 14px;
	color:black;
}

.projectbox-arrow {
    margin-left: auto;
    margin-right: auto;
    background-image: url("/assets/images/icons/project-arrow-inactive.png");
    background-size: cover;
    width: 22px;
    height: 13px;
    position: absolute;
    left: 296px;
    bottom: 9px;
	-ms-transform: rotate(180deg); /* IE 9 */
    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
    transform: rotate(180deg);
	cursor: pointer;
}

.projectbox[expanded="true"] .projectbox-arrow {
	-ms-transform: rotate(0deg); /* IE 9 */
    -webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
    transform: rotate(0deg);
}

.projectbox-arrow:hover {
    margin-left: auto;
    margin-right: auto;
    background-image: url("/assets/images/icons/project-arrow-active.png");
    background-size: cover;
    width: 22px;
    height: 13px;
    position: absolute;
    left: 296px;
    bottom: 9px;
}

.leave-project-button{
	cursor:	pointer;
	float: right;
	position: absolute;
	right: 10px;
	top: 8px;
	width:24px;
	height:24px;
	background-image : url("/assets/images/buttons/project-close-inactive.png");
	background-size:cover;
}
/* ... */

